Update Special Edition 10 ranks

--- a/adm/style/mr_body.html
+++ b/adm/style/mr_body.html
@@ -32,6 +32,20 @@
 				<dd><select name="user_rank_two" id="user_rank_two">{S_RANK_TWO_OPTIONS}</select></dd>
 				<dt><label for="user_rank_three">{L_ACP_RANK_THREE}{L_COLON}</label></dt>
 				<dd><select name="user_rank_three" id="user_rank_three">{S_RANK_THREE_OPTIONS}</select></dd>
+				<dt><label for="user_rank_four">{L_ACP_RANK_FOUR}{L_COLON}</label></dt>
+				<dd><select name="user_rank_four" id="user_rank_four">{S_RANK_FOUR_OPTIONS}</select></dd>
+				<dt><label for="user_rank_five">{L_ACP_RANK_FIVE}{L_COLON}</label></dt>
+				<dd><select name="user_rank_five" id="user_rank_five">{S_RANK_FIVE_OPTIONS}</select></dd>
+				<dt><label for="user_rank_six">{L_ACP_RANK_SIX}{L_COLON}</label></dt>
+				<dd><select name="user_rank_six" id="user_rank_six">{S_RANK_SIX_OPTIONS}</select></dd>
+				<dt><label for="user_rank_seven">{L_ACP_RANK_SEVEN}{L_COLON}</label></dt>
+				<dd><select name="user_rank_seven" id="user_rank_seven">{S_RANK_SEVEN_OPTIONS}</select></dd>
+				<dt><label for="user_rank_eight">{L_ACP_RANK_EIGHT}{L_COLON}</label></dt>
+				<dd><select name="user_rank_eight" id="user_rank_eight">{S_RANK_EIGHT_OPTIONS}</select></dd>
+				<dt><label for="user_rank_nine">{L_ACP_RANK_NINE}{L_COLON}</label></dt>
+				<dd><select name="user_rank_nine" id="user_rank_nine">{S_RANK_NINE_OPTIONS}</select></dd>
+				<dt><label for="user_rank_ten">{L_ACP_RANK_TEN}{L_COLON}</label></dt>
+				<dd><select name="user_rank_ten" id="user_rank_ten">{S_RANK_TEN_OPTIONS}</select></dd>
 			</dl>
 			{S_FORM_TOKEN}
 			<input type="hidden" name="hidden_user_id" id="hidden_user_id" value="{HIDDEN_RANK_USER_ID}" />
